# Unmute

./: .gitignore  MEMORY.md  README.md  Temp Quick Plan.md  package-lock.json  package.json  vite.config.ts
scripts/: setup.ps1  setup.sh
src/: app.js  app.ts  index.html  overlay.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: asr.rs  audio.rs  cleanup.rs  config.rs  hotkey.rs  logger.rs  main.rs  paste.rs  setup.rs
