[package]
name = "unmute"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
hound = "3.5"
cpal = "0.15"
dirs = "6"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
zip = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
